fixed x-axis overflow issue

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -93,7 +93,7 @@
     @apply text-xl text-muted-foreground;
   }
   html {
-    @apply min-h-screen;
+    @apply min-h-screen overflow-x-hidden;
     -webkit-tap-highlight-color: transparent;
   }
   body {
